gamepad-server/gamepad/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamepad
  namespace: gamepad-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamepad
  template:
    metadata:
      labels:
        app: gamepad
    spec:
      securityContext:
        fsGroup: 8675
      containers:
        - name: gamepad
          image: ghcr.io/sweeneytr/gamepad:latest
          imagePullPolicy: Always
          imagePullSecrets:
            - name: ghcr-secret
          ports:
            - containerPort: 8080
              name: http
