gamepad-server/gamepad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamepad
  namespace: gamepad-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: gamepad
