gamepad-server/gamepad/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamepad
  namespace: gamepad-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: gamepad.wavecat.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gamepad
                port:
                  name: http
  tls:
    - hosts:
        - gamepad.wavecat.net
      secretName: gamepad.wavecat.net
